--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.0.0",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
@@ -18,7 +19,20 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@taiga-ui/addon-mobile": "^3.41.1",
+    "@taiga-ui/addon-table": "^3.41.1",
+    "@taiga-ui/addon-tablebars": "^3.41.1",
+    "@taiga-ui/cdk": "^3.41.1",
+    "@taiga-ui/core": "^3.41.1",
+    "@taiga-ui/icons": "^3.41.1",
+    "@taiga-ui/kit": "^3.41.1",
+    "@taiga-ui/layout": "^3.41.1",
+    "@taiga-ui/styles": "^3.41.1",
+    "bootstrap": "^5.3.1",
+    "bootstrap5": "^1.1.9",
+    "firebase": "^10.2.0",
     "rxjs": "~7.8.0",
+    "taiga-ui": "^3.41.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
