--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.2.1",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
@@ -30,9 +32,12 @@
     "@taiga-ui/styles": "^3.41.1",
     "bootstrap": "^5.3.1",
     "bootstrap5": "^1.1.9",
+    "datatables.net": "^1.11.3",
+    "datatables.net-bs5": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
     "firebase": "^10.2.0",
+    "jquery": "^3.6.0",
     "rxjs": "~7.8.0",
-    "taiga-ui": "^3.41.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -40,7 +45,9 @@
     "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "~16.1.8",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.9",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
