Revert "fixed ui"
This reverts commit 637c73c2b787447be6d273f1c82b75f65d594da3.

--- a/angular.json
+++ b/angular.json
@@ -73,10 +73,10 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": true,
+              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": false,
-              "extractLicenses": true,
+              "vendorChunk": true,
+              "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
             }
