--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "source-map-explorer": "source-map-explorer dist/lms/**/*.js"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
