--- a/package.json
+++ b/package.json
@@ -18,24 +18,18 @@
     "@angular/core": "^16.1.0",
     "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.1.0",
-    "@angular/material": "^16.2.1",
+    "@angular/material": "~16.2.1",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@taiga-ui/addon-mobile": "^3.41.1",
-    "@taiga-ui/addon-table": "^3.41.1",
-    "@taiga-ui/addon-tablebars": "^3.41.1",
-    "@taiga-ui/cdk": "^3.41.1",
-    "@taiga-ui/core": "^3.41.1",
-    "@taiga-ui/icons": "^3.41.1",
-    "@taiga-ui/kit": "^3.41.1",
-    "@taiga-ui/layout": "^3.41.1",
-    "@taiga-ui/styles": "^3.41.1",
+    "@taiga-ui/cdk": "^3.42.1",
+    "@taiga-ui/core": "^3.42.1",
+    "@taiga-ui/icons": "^3.42.1",
+    "@taiga-ui/kit": "^3.42.1",
+    "@taiga-ui/styles": "^3.42.1",
+    "@tinkoff/ng-dompurify": "3.0.0",
     "bootstrap": "^5.3.1",
-    "bootstrap5": "^1.1.9",
-    "datatables.net": "^1.11.3",
-    "datatables.net-bs5": "^1.11.3",
-    "datatables.net-dt": "^1.11.3",
+    "dompurify": "2.2.9",
     "firebase": "^10.2.0",
     "jquery": "^3.6.0",
     "rxjs": "~7.8.0",
@@ -47,6 +41,7 @@
     "@angular/cli": "~16.1.8",
     "@angular/compiler-cli": "^16.1.0",
     "@types/datatables.net": "^1.10.21",
+    "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.9",
     "jasmine-core": "~4.6.0",
