--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@taiga-ui/addon-mobile": "^3.42.1",
     "@taiga-ui/cdk": "^3.42.1",
     "@taiga-ui/core": "^3.42.1",
     "@taiga-ui/icons": "^3.42.1",
     "@taiga-ui/kit": "^3.42.1",
+    "@taiga-ui/layout": "^3.42.1",
     "@taiga-ui/styles": "^3.42.1",
     "@tinkoff/ng-dompurify": "3.0.0",
     "bootstrap": "^5.3.1",
